--- a/server/.example.env
+++ b/server/.example.env
@@ -1,6 +1,6 @@
-GITHUB_ACCESS_TOKEN="e85152594a5d3fced0e45f1dc470657af09d431f "
-GITHUB_REPO="statistic-is-fun/challengeme-statistics"
-ENV_NAME="michael"
+GITHUB_ACCESS_TOKEN="<PASTE_YOUR_ADMIN_TOKEN>"
+GITHUB_REPO="<NAME_OF_YOUR_REPO>"
+ENV_NAME="<NAME_OF_YOUR_ENV>"
 
 # OPTIONAL
 
